--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="welcome-area">
         <div class="welcome-slides owl-carousel">
             <!-- Single Slide -->
-            <div class="single-welcome-slide bg-img  jarallax" style="background-image: url(img/bg-img/bgd2.gif);">
+            <div class="single-welcome-slide bg-img  jarallax" style="background-image: url(img/bg-img/bgd.gif);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
