--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <!-- Single Schedule Info -->
                                                 <div class="single-schedule-info">
-                                                    <h6>Introduction to CSS eith Pen</h6>
+                                                    <h6>Introduction to CSS with Pen</h6>
                                                 </div>
                                             </div>
                                             <!-- Single Schedule Info -->
@@ -683,8 +683,8 @@
                             <div class="footer-contact-info">
                                 <p><i class="zmdi zmdi-map"></i> Slack Platform</p>
                                 <p><i class="zmdi zmdi-phone"></i> 0731 - 4259656</p>
-                                <p><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</p>
-                                <p><i class="zmdi zmdi-globe"></i>www.incubation.medicaps.ac.in</p>
+                                <a herf="muincubationcell@medicaps.ac.in"><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</a>
+                                <a herf="www.incubation.medicaps.ac.in"><i class="zmdi zmdi-globe"></i>www.incubation.medicaps.ac.in</a>
                             </div>
                         </div>
                     </div>
