--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <li><a href="#faqs">FAQs</a></li>
                                 <li><a href="#schedule">SCHEDULE</a></li>
                             </ul>
-                            <a href="http://bit.ly/aarambh20" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Register <i class="zmdi zmdi-long-arrow-right"></i></a>
+                            <a target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Register <i class="zmdi zmdi-long-arrow-right"></i></a>
                         </div>
                     </div>
                 </nav>
@@ -200,7 +200,6 @@
                                                 <!-- Single Schedule Info -->
                                                 <div class="single-schedule-info">
                                                     <h6>Opening Ceremony</h6>
-                                                    <p>by <span>VC Sir</span> / Vice Chancellor Medi-Caps University</p>
                                                 </div>
                                             </div>
                                             <!-- Single Schedule Info -->
@@ -214,7 +213,6 @@
                                                 <!-- Single Schedule Info -->
                                                 <div class="single-schedule-info">
                                                     <h6>Welcome  Speech</h6>
-                                                    <p>by <span>Chief Guest</span> / [Position] of [Compony]</p>
                                                 </div>
                                             </div>
                                             <!-- Single Schedule Info -->
@@ -349,14 +347,14 @@
                             <img src="img/core-img/p1.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>59</h2>
-                        <a href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                        <a  target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
                         <div class="ticket-pricing-table-details">
-                            <p><i class="zmdi zmdi-check"></i> 50 Tickets</p>
+                            <p><i class="zmdi zmdi-check"></i> Limited Tickets</p>
                             <p><i class="zmdi zmdi-check"></i> Free Participation Certificate</p>
-                            <p><i class="zmdi zmdi-check"></i> Learning Workshops</p>
-                            <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
-                            <p><i class="zmdi zmdi-check"></i> Quizes And Prices</p>
+                            <p><i class="zmdi zmdi-check"></i> Metor guides</p>
+                            <p><i class="zmdi zmdi-check"></i> Helping Hands</p>
+                            <p><i class="zmdi zmdi-check"></i> Exiting Prices</p>
                         </div>
                     </div>
                 </div>
@@ -370,12 +368,12 @@
                             <img src="img/core-img/p3.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>199</h2>
-                        <a href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                        <a target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
                         <div class="ticket-pricing-table-details">
-                            <p><i class="zmdi zmdi-check"></i> Free Webinars</p>
+                            <p><i class="zmdi zmdi-check"></i> Helping Hands</p>
                             <p><i class="zmdi zmdi-check"></i> Complete Guidence</p>
-                            <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
+                            <p><i class="zmdi zmdi-check"></i> Free Participation Certificate</p>
                             <p><i class="zmdi zmdi-check"></i> Technical Supports</p>
                             <p><i class="zmdi zmdi-check"></i> Exiting prices</p>
                         </div>
@@ -400,44 +398,6 @@
             </div>
 
             <div class="row">
-                <div class="col-12">
-                    <!-- Our Sponsor area -->
-                    <div class="our-sponsor-area d-flex flex-wrap">
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-1.png" alt=""></a>
-                        </div>
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-2.png" alt=""></a>
-                        </div>
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-3.png" alt=""></a>
-                        </div>
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-4.png" alt=""></a>
-                        </div>
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-5.png" alt=""></a>
-                        </div>
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-6.png" alt=""></a>
-                        </div>
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-7.png" alt=""></a>
-                        </div>
-                        <!-- Single Sponsor -->
-                        <div class="single-sponsor wow fadeInUp rotate" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-8.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-
                 <!-- Our client area -->
                 <div class="col-12">
                     <div class="our-client-area mt-100 wow fadeInUp" data-wow-delay="300ms">
@@ -666,9 +626,9 @@
 
                             <!-- Social Info -->
                             <div class="social-info">
-                                <a href="https://www.facebook.com/MediCapsUniversity/"><i class="zmdi zmdi-facebook"></i></a>
-                                <a href="https://www.instagram.com/incubationcenter/"><i class="zmdi zmdi-instagram"></i></a>
-                                <a href="https://www.linkedin.com/company/incubationcenter"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a target="_blank" href="https://www.facebook.com/MediCapsUniversity/"><i class="zmdi zmdi-facebook"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/incubationcenter/"><i class="zmdi zmdi-instagram"></i></a>
+                                <a target="_blank" href="https://www.linkedin.com/company/incubationcenter"><i class="zmdi zmdi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -683,8 +643,8 @@
                             <div class="footer-contact-info">
                                 <p><i class="zmdi zmdi-map"></i> Slack Platform</p>
                                 <p><i class="zmdi zmdi-phone"></i> 0731 - 4259656</p>
-                                <a herf="muincubationcell@medicaps.ac.in"><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</a>
-                                <a herf="www.incubation.medicaps.ac.in"><i class="zmdi zmdi-globe"></i>www.incubation.medicaps.ac.in</a>
+                                <p><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</p>
+                                <p><i class="zmdi zmdi-globe"></i>www.incubation.medicaps.ac.in</p>
                             </div>
                         </div>
                     </div>
