--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         <div class="ticket-pricing-table-details">
                             <p><i class="zmdi zmdi-check"></i> Limited Tickets</p>
                             <p><i class="zmdi zmdi-check"></i> Free Participation Certificate</p>
-                            <p><i class="zmdi zmdi-check"></i> Metor guides</p>
+                            <p><i class="zmdi zmdi-check"></i> Mentor guides</p>
                             <p><i class="zmdi zmdi-check"></i> Helping Hands</p>
                             <p><i class="zmdi zmdi-check"></i> Exiting Prices</p>
                         </div>
@@ -515,7 +515,7 @@
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. Is there a registration fee for Code Tussle?</a>
-                            <p>A. Yes. While registering, you need to pay (Rs. ) as a one-time registration fee for Code Tussle
+                            <p>A. Yes. While registering, you need to pay (Rs. 199) as a one-time registration fee for Code Tussle
                                 regardless of your team size.</p>
                         </div>
                     </div>
