--- a/index.html
+++ b/index.html
@@ -111,10 +111,7 @@
                     <div class="about-content-text mb-80">
                         <h6 class="wow fadeInUp" data-wow-delay="300ms">About AARAMBH</h6>
                         <h3 class="wow fadeInUp" data-wow-delay="300ms">Journey Towards Innovation</h3>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">MIIC 2020 is organizing AARAMBH 2k20, a three-day fest. provides college
-                            students a platform to connect and learn about the best ways to nurture their careers in their respective
-                            ecosystems. #AARAMBH2k20 attendees will engage themselves in speaker sessions, fresher's career guidance
-                            by GSOCers, entrepreneurs, learn about business models, and 36 hrs Hackathon.
+                        <p class="wow fadeInUp" data-wow-delay="300ms">MIIC & E-CELL is organizing AARAMBH 2020, a three-day fest. provides college students a platform to connect and learn about the best ways to nurture their careers in their respective ecosystems. #AARAMBH2020 attendees will engage themselves in speaker sessions, CSS with Pen Competition, and 36 hrs Hackathon.
                             </p>
                         <a href="#ticket" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested <i class="zmdi zmdi-long-arrow-right"></i></a>
                     </div>
