--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- Our Speakings Area End -->
 
     <!-- Our Schedule Area Start -->
-    <section class="our-schedule-area section-padding-50" id="schedule">
+    <section class="our-schedule-area section-padding-100" id="schedule" style="margin-top:40px;">
         <div class="container">
             <div class="row">
                 <!-- Heading -->
