--- a/index.html
+++ b/index.html
@@ -466,8 +466,38 @@
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. When will the result be announced?</a>
-                            <p>A.Next day after completion of Code Tussle.</p>
+                            <a class="blog-title" href="#">Q. What is Code Tussle?</a>
+                            <p>A. Code Tussle is a complete online Hackathon conducted by Medi-Caps Innovation and
+Incubation Center (MIIC) and Entrepreneurship Cell (E-Cell). It is one of the most important
+activities of AARAMBH-2020.
+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 grow">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-text text-center">
+                            <a class="blog-title" href="#">Q. When will Code Tussle start?</a>
+                            <p>A. On September 20th, at 12:00 noon, Code Tussle will commence on GitHub. It is a 36-hour
+hackathon and will complete at 11:00 PM on September 21st, 2020. After which judges and
+organizers will evaluate your submissions and declare results on the website after the
+conclusion of the event.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 grow">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-text text-center">
+                            <a class="blog-title" href="#">Q. What is the procedure of Code Tussle?</a>
+                            <p>A. Procedure: <br>
+1. Make a team according to the above-said team size and decide your leader.<br>
+2. Register yourself here (link)<br>
+3. Choose a theme for your problem statement here (Link)<br>
+4. Code Tussle starts. Provide bank account details of your leader for transferring of prize
+money in case your team wins.<br>
+5. Make your product (Android app, Website)<br>
+6. Submit it for evaluation on GitHub.<br>
+7. Results will be declared on the website</p>
                         </div>
                     </div>
                 </div>
@@ -476,24 +506,7 @@
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. How to make the submission on GitHub?</a>
                             <p>A. Update your commits on GitHub from time to time and prepare a video presentation of your
-                                final product.
-                                </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 grow">
-                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
-                        <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. What can be the team size?</a>
-                            <p>A. Minimum:1 and Maximum: 4 members are allowed.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 grow">
-                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
-                        <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. What is Code Tussle?</a>
-                            <p>A. Code Tussle is a completely online Hackathon conducted by Medi-Caps Innovation and Incubation Center (MIIC) and Entrepreneurship Cell (E-Cell).</p>
+final product.</p>
                         </div>
                     </div>
                 </div>
@@ -501,18 +514,17 @@
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. Is there a registration fee for Code Tussle?</a>
-                            <p>A. Yes. While registering, you need to pay (Rs. 199) as a one-time registration fee for Code Tussle
-                                regardless of your team size.</p>
+                            <a class="blog-title" href="#">Q. How will you check for Plagiarism?</a>
+                            <p>A. We have experts for checking plagiarism and GitHub provides support in the same along with various tools.
+</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. How will you check for Plagiarism?</a>
-                            <p>A. We have experts for checking plagiarism and GitHub provides support in the same along with
-                                various tools.
+                            <a class="blog-title" href="#">Q. When will the result be announced?</a>
+                            <p>A. Not later than a week after completion of Code Tussle.
                                 </p>
                         </div>
                     </div>
