--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ participate individually. Winners will be awarded prizes and certificates.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What are the themes for Start with CSS?</a>
-                            <p>A. Themes:
+                            <p>A. Themes:<br>
 1. Ecosystem<br>
 2. Space<br>
 3. Cartoon Illustration<br>
@@ -586,18 +586,15 @@ participate individually. Winners will be awarded prizes and certificates.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What are the Pre-requisites?</a>
-                            <p>A. A stable internet connection and pre-registration and knowledge in frontend technologies like
-HTML, CSS, JavaScript</p>
+                            <p>A. A stable internet connection and pre-registration and knowledge in frontend technologies like HTML, CSS, JavaScript</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#"Q. What is the criterion for participating in Start with CSS?
-</a>
-                            <p>There is no eligibility criterion, as this is a competition open for all who are interested in CSS
-and HTML.
+                            <a class="blog-title" href="#">Q. What is the criterion for participating in Start with CSS?</a>
+                            <p>A. CodePen.io and Slack and participants need to register beforehand.
                                 </p>
                         </div>
                     </div>
@@ -605,8 +602,7 @@ and HTML.
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. On which platform will Start with CSS take place?
-</a>
+                            <a class="blog-title" href="#">Q. On which platform will Start with CSS take place?</a>
                             <p>A. CodePen.io and Slack and participants need to register beforehand.
                                 </p>
                         </div>
@@ -680,8 +676,8 @@ and HTML.
 
                             <!-- Footer Nav -->
                             <ul class="footer-nav">
-                                <li><a href="#">Workshops</a></li>
-                                <li><a href="#">Quizes And prizes</a></li>
+                                <li><a href="#">Enlightening Speeches</a></li>
+                                <li><a href="#">Exciting Prizes</a></li>
                                 <li><a href="#">HTML & CSS</a></li>
                                 <li><a href="#">Hackaton</a></li>
                             </ul>
