--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                             <ul id="nav">
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li><a href="#about">About Us</a></li>
-                                <li><a href="#sponsor">Sponsors</a></li>
                                 <li><a href="#faqs">FAQs</a></li>
                                 <li><a href="#schedule">SCHEDULE</a></li>
                             </ul>
-                            <a target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Register <i class="zmdi zmdi-long-arrow-right"></i></a>
+                            <a target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-2">Register CSS<i class="zmdi zmdi-long-arrow-right"></i></a>
+                            <a target="_blank" href="https://bit.ly/aarambhhack" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-2">Register Hackaton<i class="zmdi zmdi-long-arrow-right"></i></a>
                         </div>
                     </div>
                 </nav>
@@ -163,11 +163,9 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-12">
                     <div class="schedule-tab">
-                        <!-- Nav Tabs -->
                         <ul class="nav nav-tabs wow fadeInUp" data-wow-delay="300ms" id="conferScheduleTab" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" id="monday-tab" data-toggle="tab" href="#step-one" role="tab" aria-controls="step-one" aria-expanded="true">Monday <br> <span>September 19, 2020</span></a>
@@ -336,9 +334,9 @@
 
             <div class="row">
                 <!-- Single Ticket Pricing Table -->
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-3">
                     <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">HTML & CSS</h6>
+                        <h6 class="ticket-plan">HTML/CSS <br>Early Bird</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="img/core-img/p1.png" alt="">
@@ -346,34 +344,42 @@
                         <h2 class="ticket-price"><span>Rs</span>59</h2>
                         <a  target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
-                        <div class="ticket-pricing-table-details">
-                            <p><i class="zmdi zmdi-check"></i> Limited Tickets</p>
-                            <p><i class="zmdi zmdi-check"></i> Mentor guides</p>
-                            <p><i class="zmdi zmdi-check"></i> Free Participation Certificate</p>
-                            <p><i class="zmdi zmdi-check"></i> Helping Hands</p>
-                            <p><i class="zmdi zmdi-check"></i> Exiting Prices</p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-3">
+                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
+                        <h6 class="ticket-plan">HTML/CSS <br>Regular Bird</h6>
+                        <!-- Ticket Icon -->
+                        <div class="ticket-icon">
+                            <img src="img/core-img/p1.png" alt="">
                         </div>
+                        <h2 class="ticket-price"><span>Rs</span>79</h2>
+                        <!-- Ticket Pricing Table Details -->
                     </div>
                 </div>
 
                 <!-- Single Ticket Pricing Table -->
-                <div class="col-12 col-md-6 col-lg-6">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">Hackathon</h6>
+                        <h6 class="ticket-plan">Hackathon <br>Regular Bird</h6>
+                        <!-- Ticket Icon -->
+                        <div class="ticket-icon">
+                            <img src="img/core-img/p3.png" alt="">
+                        </div>
+                        <h2 class="ticket-price"><span>Rs</span>249</h2>
+                        <!-- Ticket Pricing Table Details -->
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
+                        <h6 class="ticket-plan">Hackathon <br>Early Bird</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="img/core-img/p3.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>199</h2>
-                        <a target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                        <a target="_blank" href="https://bit.ly/aarambhhack" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
-                        <div class="ticket-pricing-table-details">
-                            <p><i class="zmdi zmdi-check"></i> Helping Hands</p>
-                            <p><i class="zmdi zmdi-check"></i> Complete Guidence</p>
-                            <p><i class="zmdi zmdi-check"></i> Free Participation Certificate</p>
-                            <p><i class="zmdi zmdi-check"></i> Technical Supports</p>
-                            <p><i class="zmdi zmdi-check"></i> Exiting prices</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -477,17 +483,6 @@ activities of AARAMBH-2020.
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. When will Code Tussle start?</a>
-                            <p>A. On September 20th, at 12:00 noon, Code Tussle will commence on GitHub. It is a 36-hour
-hackathon and will complete at 11:00 PM on September 21st, 2020. After which judges and
-organizers will evaluate your submissions and declare results on the website after the
-conclusion of the event.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 grow">
-                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
-                        <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is the procedure of Code Tussle?</a>
                             <p>A. Procedure: <br>
 1. Make a team according to the above-said team size and decide your leader.<br>
@@ -498,6 +493,18 @@ conclusion of the event.</p>
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-6 col-lg-4 grow">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-text text-center">
+                            <a class="blog-title" href="#">Q. When will Code Tussle start?</a>
+                            <p>A. On September 20th, at 12:00 noon, Code Tussle will commence on GitHub. It is a 36-hour
+hackathon and will complete at 11:00 PM on September 21st, 2020. After which judges and
+organizers will evaluate your submissions and declare results on the website after the
+conclusion of the event.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
@@ -634,6 +641,9 @@ participate individually. Winners will be awarded prizes and certificates.
                                 <a target="_blank" href="https://www.facebook.com/MediCapsUniversity/"><i class="zmdi zmdi-facebook"></i></a>
                                 <a target="_blank" href="https://www.instagram.com/incubationcenter/"><i class="zmdi zmdi-instagram"></i></a>
                                 <a target="_blank" href="https://www.linkedin.com/company/incubationcenter"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a target="_blank" href="https://www.facebook.com/ecell.medicaps/"><i class="zmdi zmdi-facebook"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/ecell.medicaps/"><i class="zmdi zmdi-instagram"></i></a>
+                                <a target="_blank" href="https://in.linkedin.com/company/ecell-medi-caps"><i class="zmdi zmdi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -650,6 +660,7 @@ participate individually. Winners will be awarded prizes and certificates.
                                 <p><i class="zmdi zmdi-phone"></i> 0731 - 4259656</p>
                                 <p><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</p>
                                 <p><i class="zmdi zmdi-globe"></i>www.incubation.medicaps.ac.in</p>
+                                
                             </div>
                         </div>
                     </div>
