--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <title>AARAMBH</title>
     <link rel="icon" href="./img/core-img/favicon.png">
     <link rel="stylesheet" href="style.css">
-
 </head>
-
 <body>
-    <!-- Preloader -->
     <div id="preloader">
         <div class="loader"></div>
     </div>
@@ -78,7 +75,7 @@
                     </div>
                 </div>
             </div>
-            <div class="single-welcome-slide bg-img" style="background-image: url(img/bg-img/bgd.gif);">
+            <div class="single-welcome-slide bg-img" style="background-image: url(img/bg-img/4.png);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
@@ -226,7 +223,6 @@
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
                                                 <p><i class="zmdi zmdi-time"></i> 1Pm - 2Pm on 19 Sept 2020</p>
-                                                <p><i class="zmdi zmdi-map"></i>Codepen.io Platform</p>
                                             </div>
                                         </div>                                        
                                     </div>
@@ -251,7 +247,6 @@
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
                                                 <p><i class="zmdi zmdi-time"></i> 12Pm - 1Pm on 20 Sept 2020</p>
-                                                <p><i class="zmdi zmdi-map"></i> Codepen.io platform</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -266,7 +261,6 @@
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
                                                 <p><i class="zmdi zmdi-time"></i> 1Pm - 1:30Pm on 20 Sept 2020</p>
-                                                <p><i class="zmdi zmdi-map"></i> Slack platform </p>
                                             </div>
                                         </div>
                                     </div>
@@ -290,7 +284,6 @@
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
                                                 <p><i class="zmdi zmdi-time"></i> 11Am - 12Pm on 21 Sept 2020</p>
-                                                <p><i class="zmdi zmdi-map"></i> Slack platform</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -305,7 +298,6 @@
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
                                                 <p><i class="zmdi zmdi-time"></i> 12Pm - 1Pm on 21 Sept 2020</p>
-                                                <p><i class="zmdi zmdi-map"></i> Slack platform </p>
                                             </div>
                                         </div>
                                     </div>
@@ -342,6 +334,7 @@
                             <img src="img/core-img/p1.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>59</h2>
+                        <p>Till 13th September</p>
                         <a  target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
                     </div>
@@ -354,6 +347,20 @@
                             <img src="img/core-img/p1.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>79</h2>
+                        <p>13th September onwards</p>
+                        <!-- Ticket Pricing Table Details -->
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
+                        <h6 class="ticket-plan">Hackathon <br>Early Bird</h6>
+                        <!-- Ticket Icon -->
+                        <div class="ticket-icon">
+                            <img src="img/core-img/p3.png" alt="">
+                        </div>
+                        <h2 class="ticket-price"><span>Rs</span>199</h2>
+                        <p>Till 13th September</p>
+                        <a target="_blank" href="https://bit.ly/aarambhhack" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
                     </div>
                 </div>
@@ -367,21 +374,11 @@
                             <img src="img/core-img/p3.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>249</h2>
+                        <p>13th September onwards</p>
                         <!-- Ticket Pricing Table Details -->
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">Hackathon <br>Early Bird</h6>
-                        <!-- Ticket Icon -->
-                        <div class="ticket-icon">
-                            <img src="img/core-img/p3.png" alt="">
-                        </div>
-                        <h2 class="ticket-price"><span>Rs</span>199</h2>
-                        <a target="_blank" href="https://bit.ly/aarambhhack" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
-                        <!-- Ticket Pricing Table Details -->
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
@@ -432,6 +429,20 @@
                                     <i class="zmdi zmdi-quote"></i>
                                 </div>
                             </div>
+                            <div class="single-client-content grow">
+                                <!-- Single client Text -->
+                                <div class="single-client-text">
+                                    <h2 style="color: white; text-align: center;">Know about e-Cell</h2>
+                                    <p class="text-justify">The E-Cell Medi-Caps University is a student body formed in 2016 with the motive to Ideate.Innovate.Initiate. A team of mentors and  E-cell students strives towards creating an entrepreneurial ecosystem to provide the platform for individuals with creative minds and ideas with potential for substantial business opportunities
+                                        At Medi-Caps University, while academic excellence is meant to be uncompromising, we believe that the significance of entrepreneurial skill is indelible to an integrated experience in our university. Aspiring to stride towards a holistic development.</p>
+                                    <!-- Single client Thumb and info -->
+                                </div>
+                                <!-- Single client Icon -->
+                                <div class="client-icon">
+                                    <i class="zmdi zmdi-quote"></i>
+                                </div>
+                            </div>
+
 
                             <!-- Single client Slider -->
                             <div class="single-client-content grow">
@@ -465,7 +476,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4>FAQs For Hackathon</h4>
+                        <h4>FAQs For CODE Tussle</h4>
                         <p>Boost Your Knowledge</p>
                     </div>
                 </div>
@@ -484,9 +495,9 @@ activities of AARAMBH-2020.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is the procedure of Code Tussle?</a>
-                            <p>A. Procedure: <br>
+                            <p>A. Procedure for hackaton: <br>
 1. Make a team according to the above-said team size and decide your leader.<br>
-2. Register yourself here (link)<br>
+2. Register yourself<br>
 3. Make your product (Android app, Website)<br>
 4. Submit it for evaluation on GitHub.<br>
 5. Results will be declared on the website</p>
@@ -540,7 +551,7 @@ final product.</p>
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4>FAQs For CSS</h4>
+                        <h4>FAQs For CSS WITH PEN</h4>
                         <p>Knowledge is Power</p>
                     </div>
                 </div>
@@ -563,7 +574,7 @@ participate individually. Winners will be awarded prizes and certificates.
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is the evaluation criterion for Start with CSS?
                             </a>
-                            <p>A. The evaluation will be based on:-
+                            <p>A. The evaluation will be based on:-<br>
 1. Theme Utilization<br>
 2. Technicality<br>
 3. Creativity<br>
@@ -578,7 +589,7 @@ participate individually. Winners will be awarded prizes and certificates.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What are the themes for Start with CSS?</a>
-                            <p>A. Themes:<br>
+                            <p>A. Themes for the CSS event:<br>
 1. Ecosystem<br>
 2. Space<br>
 3. Cartoon Illustration<br>
@@ -641,6 +652,7 @@ participate individually. Winners will be awarded prizes and certificates.
                                 <a target="_blank" href="https://www.facebook.com/MediCapsUniversity/"><i class="zmdi zmdi-facebook"></i></a>
                                 <a target="_blank" href="https://www.instagram.com/incubationcenter/"><i class="zmdi zmdi-instagram"></i></a>
                                 <a target="_blank" href="https://www.linkedin.com/company/incubationcenter"><i class="zmdi zmdi-linkedin"></i></a>
+                                <br><br>
                                 <a target="_blank" href="https://www.facebook.com/ecell.medicaps/"><i class="zmdi zmdi-facebook"></i></a>
                                 <a target="_blank" href="https://www.instagram.com/ecell.medicaps/"><i class="zmdi zmdi-instagram"></i></a>
                                 <a target="_blank" href="https://in.linkedin.com/company/ecell-medi-caps"><i class="zmdi zmdi-linkedin"></i></a>
@@ -656,10 +668,9 @@ participate individually. Winners will be awarded prizes and certificates.
 
                             <!-- Contact Area -->
                             <div class="footer-contact-info">
-                                <p><i class="zmdi zmdi-map"></i> Slack Platform</p>
                                 <p><i class="zmdi zmdi-phone"></i> 0731 - 4259656</p>
                                 <p><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</p>
-                                <p><i class="zmdi zmdi-globe"></i>www.incubation.medicaps.ac.in</p>
+                                <p><i class="zmdi zmdi-globe"></i>incubation.medicaps.ac.in</p>
                                 
                             </div>
                         </div>
