--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 10Am - 10:15Am on 19 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 10AM - 10:15AM on 19 Sept 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -209,7 +209,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 10:15Am - 11:30Am on 19 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 10:15AM - 11:30AM on 19 Sept 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -222,7 +222,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 1Pm - 2Pm on 19 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 1PM - 2PM on 19 Sept 2020</p>
                                             </div>
                                         </div>                                        
                                     </div>
@@ -246,7 +246,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 12Pm - 1Pm on 20 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 12PM - 1PM on 20 Sept 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -260,7 +260,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 1Pm - 1:30Pm on 20 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 1PM - 1:30PM on 20 Sept 2020</p>
                                             </div>
                                         </div>
                                     </div>
@@ -283,7 +283,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 11Am - 12Pm on 21 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 11AM - 12PM on 21 Sept 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -297,7 +297,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 12Pm - 1Pm on 21 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 12PM - 1PM on 21 Sept 2020</p>
                                             </div>
                                         </div>
                                     </div>
